# userproxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
config/: env.dev.example  env.prod.example
src/userproxy/: __init__.py  logger_config.yaml  logging_config.py  main.py  schemas.py  websocket.py  websocket_manager.py
tests/: conftest.py  test_integration.py  test_websocket.py
